# dsview

./: .gitignore  README.md  pyproject.toml
config/: extraction.yaml  logging.yaml  model.yaml  obsidian.yaml  topic_extraction.yaml
data/input/: failed_content.json  liens_revue.md  review_links_all.json
data/test/: autogluon.txt  claude_sonnet_intro.txt  deploy_llama3.txt  hallucination_index.txt  review_links_large.json  review_links_medium.json  review_links_small.json  test_content.txt  test_content_large.txt  time_series_fm.txt
dsview/: config.py  content_extraction.py  content_loader.py  ingest_api.py  ingest_source.py  notes_generator.py
dsview/content/: content_loader.py  input_content.py
dsview/extraction/: content_extraction.py  entity_resolution.py  prompt_loader.py
dsview/obsidian/: notes_generator.py  obsidian_utils.py  sync_vault.py
notebooks/: extract_docs_summary.ipynb  extract_review_links.ipynb  extract_txt.ipynb  test_api.ipynb  test_entity_resolution.ipynb  test_extract_pdf.ipynb  test_link_extraction.ipynb  test_obsidian.ipynb  test_pydantic.ipynb  test_separate_subjects.ipynb  test_summary.ipynb
prompts/: generate_summary.txt  human_topic_extraction.txt  links_extraction.txt  system_content_description.txt  system_entity_resolution.txt  system_generate_summary.txt  system_topic_extraction.txt  system_topics_extraction.txt  user_content_description.txt  user_entity_resolution.txt  user_generate_summary.txt  user_topics_extraction.txt
